app/k8s/api-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  ports:
    - name: api
      protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: api
    tier: backend
  type: ClusterIP
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  selector:
    matchLabels:
      app: api
      tier: backend
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 2
  template:
    metadata:
      labels:
        app: api
        tier: backend
    spec:
      imagePullSecrets:
      - name: bmdevacr1919
      containers:
      - image: bmdevacr1919.azurecr.io/bm-app:v1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "10m"
            memory: "50Mi"
          limits:
            cpu: "300m"
            memory: "100Mi"
        livenessProbe:
          httpGet:
            path: /live
            port: 5000
          initialDelaySeconds: 5
          timeoutSeconds: 10
          periodSeconds: 5
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /live
            port: 5000
          initialDelaySeconds: 5
          timeoutSeconds: 10
          periodSeconds: 5
          successThreshold: 1
        name: api
        ports:
        - containerPort: 5000
          name: api-port
      terminationGracePeriodSeconds: 600
