app/k8s/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: ExternalName
  externalName: bm-dev-db.private.postgres.database.azure.com
  ports:
  - name: postgres
    protocol: TCP
    port: 5432
    targetPort: 5432
